--- a/index.html
+++ b/index.html
@@ -150,6 +150,40 @@
             name="caret-back-outline"
           ></ion-icon>
         </div>
+        <div class="relative mySlides fade hidden">
+          <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl transition-all ease-in-out duration-500"
+            src="public/img/IMG-20230728-WA0006.jpg"
+            alt=""
+          />
+          <ion-icon
+            onclick="plusSlides(-1)"
+            class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-forward-outline"
+          ></ion-icon>
+          <ion-icon
+            onclick="plusSlides(1)"
+            class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-back-outline"
+          ></ion-icon>
+        </div>
+        <div class="relative mySlides fade hidden">
+          <img
+            class="rounded-xl h-52 md:h-64 lg:h-72 xl:h-80 2xl:h-96 object-fit hover:shadow-xl transition-all ease-in-out duration-500"
+            src="public/img/IMG_20230726_132748_919.webp"
+            alt=""
+          />
+          <ion-icon
+            onclick="plusSlides(-1)"
+            class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-forward-outline"
+          ></ion-icon>
+          <ion-icon
+            onclick="plusSlides(1)"
+            class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300"
+            name="caret-back-outline"
+          ></ion-icon>
+        </div>
       </div>
       <div
         class="flex justify-center text-3xl border-b-2 rounded-3xl font-dancing my-3 p-3 text-red-600"
