--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </a>
     </div>
     <div
-      class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 bottom-0 justify-around items-center font-tangerine text-xl text-gray-700 transition-colors duration-300 z-50"
+      class="flex fixed bg-cover bg-no-repeat bg-center bg-pink-100 inset-x-0 bottom-0 justify-center items-center font-roboto text-xl text-gray-700 transition-colors duration-300 z-50"
       style="
         background-image: linear-gradient(
             rgba(255, 255, 255, 0.8),
@@ -44,14 +44,13 @@
           url('public/img/flowers.avif');
       "
     >
-      <div class="flex justify-around items-center font-merrie">
-        <div>
-          Slike: 
-        </div>
-        <div>
-          <a href="https://josipaweddings.pixieset.com/injaandluka/" target="_blank">__Link__</a>
-        </div>    
-      </div>
+    <div>
+      Slike
+    </div>
+    <ion-icon name="arrow-forward-outline"></ion-icon>
+    <div>
+      <a href="https://josipaweddings.pixieset.com/injaandluka/" target="_blank"> Inja&Luka</a>
+    </div>    
     </div>
     <div
       class="my-7 p-6 rounded-3xl shadow-lg hover:shadow-xl bg-neutral-100 relative text-gray-700 overflow-hidden font-tangerine"
@@ -85,9 +84,9 @@
       </div>
       <div class="flex items-center justify-center">
         <div class="relative">
-            <ion-icon id="downButton" class="text-lg rounded-lg absolute -left-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="arrow-undo"></ion-icon>
-            <img class="hover:cursor-pointer hover:shadow-2xl transition-all ease-in-out duration-500" id="slideshow" src="public/img/IMG_0970.jpg" alt="Slideshow Image" class="w-full h-auto rounded-lg">
-            <ion-icon id="upButton" class="text-lg rounded-lg absolute -right-7 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="arrow-redo"></ion-icon>
+            <ion-icon id="downButton" class="z-40 text-lg rounded-lg absolute -left-6 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="arrow-undo"></ion-icon>
+            <img class="z-20 hover:cursor-pointer hover:shadow-2xl transition-all ease-in-out duration-500" id="slideshow" src="public/img/IMG_0970.jpg" alt="Slideshow Image" class="w-full h-auto rounded-lg">
+            <ion-icon id="upButton" class="z-40 text-lg rounded-lg absolute -right-6 bottom-0 top-0 m-auto px-1 py-4 hover:bg-black hover:text-red-600 hover:bg-opacity-20 hover:cursor-pointer transition ease-in-out duration-300" name="arrow-redo"></ion-icon>
         </div>
       </div>
       <div class="flex items-center justify-center text-5xl text-gray-700 mb-20 mt-16 font-tangerine">
